--- a/chess.html
+++ b/chess.html
@@ -47,7 +47,7 @@
               <option value="0" selected>Médio</option>
               <option value="1">Difícil</option>
               <option value="2">Muito Díficil</option>
-              <option value="3">Dificuldade máxima</option>
+              <option value="4">Dificuldade máxima</option>
             </select>
             <button
               type="button"
@@ -99,6 +99,7 @@
           </div>
         </form>
       </div>
+      <!-- Tabuleiro -->
       <div id="tabuleiroXadrez" class="tabuleiroXadrez"></div>
       <div id="promocaoCustom">
         <div class="fundoPromocao">
