--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <!-- Carousel Bootstrap 5 -->
+    <!-- Carousel -->
     <div id="carouselChess" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button
@@ -119,13 +119,12 @@
         <span class="visually-hidden">Próximo</span>
       </button>
     </div>
-
-    
+    <!-- Inicio -->
     <section id="inicio" class="inicio-section">
       <div class="container">
         <h1 class="inicio-title">Bem-vindo ao ChessJS</h1>
         <p class="inicio-desc">
-          O melhor jogo de xadrez online feito em HTML, CSS e JavaScript.<br />
+          O melhor jogo de xadrez online feito em HTML, CSS e JavaScript.<br/>
           Jogue contra a máquina ou desafie seus amigos!
         </p>
         <a href="chess.html" class="btn btn-outline-light">
@@ -181,15 +180,15 @@
               O <strong>ChessJS</strong> é um projeto feito para apaixonados por
               xadrez. Nosso objetivo é proporcionar uma experiência divertida,
               intuitiva e acessível, seja para iniciantes ou jogadores avançados
-              com um jogo simples de xadrez.<br /><br />
+              com um jogo simples de xadrez.<br/><br/>
               Desenvolvido em HTML, CSS e JavaScript, o site oferece partidas
-              contra a máquina, modo multiplayer local e dicas para você evoluir
-              no jogo.<br /><br />
+              contra a máquina, modo multiplayer com amigos e dicas para você evoluir
+              no jogo.<br/><br/>
               Sinta-se à vontade para sugerir melhorias ou reportar bugs. Bom
               jogo!
             </p>
             <a
-              href="https://mail.google.com/mail/?view=cm&fs=1&to=renan.aguiar2@aluno.ce.gov.br"
+              href="mailto:renan.aguiar2@aluno.ce.gov.br"
               class="btn btn-outline-warning mt-3"
               >Fale Conosco</a
             >
