--- a/chess.html
+++ b/chess.html
@@ -126,6 +126,10 @@
           </div>
         </div>
       </div>
+      <div class="botoes-xadrez d-flex gap-2 flex-row w-100">
+        <button id="btnDica" class="btn btn-outline-light flex-fill mt-2 d-none">Dica</button>
+        <button id="btnUndo" class="btn btn-outline-light flex-fill mt-2 d-none">Desfazer</button>
+      </div>
       <button id="btnNewGame" class="btn btn-success mt-3 w-50 d-none">
         Novo Jogo
       </button>
