--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="col-lg-6">
             <h2 class="section-title mb-3">Sobre</h2>
             <p class="sobre-text">
-              O <strong>ChessJS</strong> é um projeto feito para apaixonados por
+              O <strong>ChessJS</strong> é um projeto de programação web feito pelos alunos Renan e Vitória para apaixonados por
               xadrez. Nosso objetivo é proporcionar uma experiência divertida,
               intuitiva e acessível, seja para iniciantes ou jogadores avançados
               com um jogo simples de xadrez.<br/><br/>
