--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               Desenvolvido em HTML, CSS e JavaScript, o site oferece partidas
               contra a máquina, modo multiplayer com amigos e dicas para você evoluir
               no jogo.<br/><br/>
-              Sinta-se à vontade para sugerir melhorias ou reportar bugs. Bom
+              Sinta-se à vontade para sugerir melhorias. Bom
               jogo!
             </p>
             <a
